# university

./: Makefile  alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml
api/: handlers.py  models.py
db/: dals.py  models.py  session.py
migrations/versions/: 372a82871dd1_create_user_table.py
